# ComputationalGeometryProject

./: .gitignore  CMakeLists.txt  agents.md
src/CgBase/: cgbasegui.h  cgbasehalfedgeprimitives.h  cgbasehalfedgetrianglemesh.h  cgbasepointcloud.h  cgbasepointlist.h  cgbaserenderableobject.h  cgbasetrianglefan.h  cgbasetrianglemesh.h
src/CgGeometry/: cghalfedgeprimitives.cpp  cghalfedgeprimitives.h  cghalfedgetrianglemesh.cpp  cghalfedgetrianglemesh.h  cgpointcloud.cpp  cgpointcloud.h  cgpointlist.cpp  cgpointlist.h  cgsphere.cpp  cgsphere.h  cgtrianglefan.cpp  cgtrianglefan.h  cgtrianglemesh.cpp  cgtrianglemesh.h
src/CgImageViewer/: cgimage.cpp  cgimage.h  cgimageviewer.cpp  cgimageviewer.h
src/CgMath/: cgeigendecomposition3x3.cpp  cgeigendecomposition3x3.h
src/CgRendering3d/: cgframebuffershader.cpp  cgframebuffershader.h  cgglbufferobject.cpp  cgglbufferobject.h  cgglframebuffer.cpp  cgglframebuffer.h  cgopenglrenderinggui.cpp  cgopenglrenderinggui.h  cgshader.cpp  cgshader.h  cgtrackball.cpp  cgtrackball.h  shadercodephong.h  vertexholder.h
src/CgUtils/: textureloader.h
src/Dependencies/Eigen/: CMakeLists.txt
src/Dependencies/imgui/: CMakeLists.txt  Makefile  cmake_install.cmake  imgui_demo.cpp
src/Dependencies/imgui/.github/ISSUE_TEMPLATE/: issue_template.yml
src/Dependencies/imgui/.github/workflows/: build.yml  scheduled.yml  static-analysis.yml
src/Dependencies/imgui/misc/freetype/: README.md
src/main/: CgGlfwWindow.cpp  CgGlfwWindow.h  cgglfwwindow.cpp  cgglfwwindow.h  main.cpp
